<resources>
    <string name="app_name">GR04 SENS Motion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opret"><u><b>Har du ikke en konto?</b></u></string>
    <string name="PersData">Jeg accepterer SENSmotion\'s vilkår for håndtering af personfølsomme oplysninger</string>
    <string name="facebook_app_id">Facebook App ID</string>
    <string name="nyPatient"><u>Opret ny patient</u></string>
    <string name="nameTitle"><u>Navn</u></string>
    <string name="idTitle"><u>Patient ID</u></string>
    <string name="mobility"><u>Mobilitet</u></string>
    <string name="info_walking">Dette ikon repræsenterer dit mål for at\ngå.</string>
    <string name="info_standing">Dette ikon repræsenterer dit mål for at stå.</string>
    <string name="info_cycling">Dette ikon repræsenterer dit mål for at cykle.</string>
    <string name="info_exercise">Dette ikon repræsenterer dit mål for at træne.</string>
    <string name="info_other">Dette ikon repræsenterer dit mål for anden form for bevægelse.</string>
</resources>
